lustre-collector/src/snapshots/lustre_collector__node_stats_parsers__tests__empty_input.snap
---
source: src/node_stats_parsers.rs
expression: "parse_meminfo().easy_parse(\"\")"
---
Ok(
    (
        [],
        "",
    ),
)
