lustre-collector/src/snapshots/lustre_collector__node_stats_parsers__tests__parse_meminfo_line.snap
---
source: src/node_stats_parsers.rs
expression: parse_meminfo_line().parse(x)
---
Ok(
    (
        Node(
            MemTotal(
                NodeStat {
                    param: Param(
                        "mem_total",
                    ),
                    value: 5943788,
                },
            ),
        ),
        "\n",
    ),
)
